project file, rename, cleanups,

--- a/src/Sooda.CodeGen/Sooda.CodeGen-net-2.0.csproj
+++ b/src/Sooda.CodeGen/Sooda.CodeGen-net-2.0.csproj
@@ -1,4 +1,4 @@
-﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <ProjectType>Local</ProjectType>
     <ProductVersion>8.0.50727</ProductVersion>
@@ -166,22 +166,11 @@
     <Compile Include="VSvbprojProjectFile.cs">
       <SubType>Code</SubType>
     </Compile>
-    <EmbeddedResource Include="CDIL\Templates\ClassField.cdil" />
-    <EmbeddedResource Include="CDIL\Templates\DatabaseSchema.cdil" />
-    <EmbeddedResource Include="CDIL\Templates\Factory.cdil" />
-    <EmbeddedResource Include="CDIL\Templates\ListWrapper.cdil" />
-    <EmbeddedResource Include="CDIL\Templates\NullableTypedWrapper.cdil" />
-    <EmbeddedResource Include="CDIL\Templates\Skeleton.cdil" />
-    <EmbeddedResource Include="CDIL\Templates\Stub.cdil" />
-    <EmbeddedResource Include="CDIL\Templates\TypedCollectionWrapper.cdil" />
-    <EmbeddedResource Include="CDIL\Templates\TypedWrapper.cdil" />
-    <EmbeddedResource Include="SoodaProject.xsd">
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
+    <Compile Include="AssemblyBuildInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="CDIL\Templates\Loader.cdil" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
