--- a/src/SoodaAddin.UI/SoodaAddin.UI.vs2003.csproj
+++ b/src/SoodaAddin.UI/SoodaAddin.UI.vs2003.csproj
@@ -16,7 +16,7 @@
                 DefaultTargetSchema = "IE50"
                 DelaySign = "false"
                 OutputType = "Library"
-                PreBuildEvent = ""
+                PreBuildEvent = '"$(ProjectDir)..\..\tools\UpdateBuildNumber.exe" "$(ProjectDir)..\..\Sooda.version" "$(ProjectDir)AssemblyBuildInfo.cs" "$(ProjectDir)..\..\build\Sooda.buildversion"'
                 PostBuildEvent = ""
                 RootNamespace = "SoodaAddin.UI"
                 RunPostBuildEvent = "OnBuildSuccess"
