--- a/src/Sooda.CodeGen/Sooda.CodeGen.vs2003.csproj
+++ b/src/Sooda.CodeGen/Sooda.CodeGen.vs2003.csproj
@@ -16,7 +16,7 @@
                 DefaultTargetSchema = "IE50"
                 DelaySign = "false"
                 OutputType = "Library"
-                PreBuildEvent = ""
+                PreBuildEvent = '"$(ProjectDir)..\..\tools\UpdateBuildNumber.exe" "$(ProjectDir)..\..\Sooda.version" "$(ProjectDir)AssemblyBuildInfo.cs" "$(ProjectDir)..\..\build\Sooda.buildversion"'
                 PostBuildEvent = ""
                 RootNamespace = "Sooda.CodeGen"
                 RunPostBuildEvent = "OnBuildSuccess"
@@ -89,6 +89,11 @@
         <Files>
             <Include>
                 <File
+                    RelPath = "AssemblyBuildInfo.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "AssemblyInfo.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
@@ -159,10 +164,6 @@
                     BuildAction = "Compile"
                 />
                 <File
-                    RelPath = "SoodaProject.xsd"
-                    BuildAction = "EmbeddedResource"
-                />
-                <File
                     RelPath = "VS2005csprojProjectFile.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
@@ -221,42 +222,6 @@
                     RelPath = "CDIL\CDILTokenizer.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "CDIL\Templates\ClassField.cdil"
-                    BuildAction = "EmbeddedResource"
-                />
-                <File
-                    RelPath = "CDIL\Templates\DatabaseSchema.cdil"
-                    BuildAction = "EmbeddedResource"
-                />
-                <File
-                    RelPath = "CDIL\Templates\Factory.cdil"
-                    BuildAction = "EmbeddedResource"
-                />
-                <File
-                    RelPath = "CDIL\Templates\ListWrapper.cdil"
-                    BuildAction = "EmbeddedResource"
-                />
-                <File
-                    RelPath = "CDIL\Templates\NullableTypedWrapper.cdil"
-                    BuildAction = "EmbeddedResource"
-                />
-                <File
-                    RelPath = "CDIL\Templates\Skeleton.cdil"
-                    BuildAction = "EmbeddedResource"
-                />
-                <File
-                    RelPath = "CDIL\Templates\Stub.cdil"
-                    BuildAction = "EmbeddedResource"
-                />
-                <File
-                    RelPath = "CDIL\Templates\TypedCollectionWrapper.cdil"
-                    BuildAction = "EmbeddedResource"
-                />
-                <File
-                    RelPath = "CDIL\Templates\TypedWrapper.cdil"
-                    BuildAction = "EmbeddedResource"
                 />
             </Include>
         </Files>
