--- a/src/Sooda/Sooda-net-2.0.csproj
+++ b/src/Sooda/Sooda-net-2.0.csproj
@@ -1,4 +1,4 @@
-﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <ProjectType>Local</ProjectType>
     <ProductVersion>8.0.50727</ProductVersion>
@@ -717,10 +717,11 @@
     <None Include="Schema\SoodaSchema.xsx">
       <DependentUpon>SoodaSchema.xsd</DependentUpon>
     </None>
-    <EmbeddedResource Include="Schema\SoodaSchema.xsd">
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
+    <Compile Include="QL\TypedWrappers\SoqlImageWrapperExpression.cs" />
+    <Compile Include="QL\TypedWrappers\SoqlNullableImageWrapperExpression.cs" />
+    <Compile Include="AssemblyBuildInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
