--- a/src/Sooda.Logging.log4net/Sooda.Logging.log4net.vs2003.csproj
+++ b/src/Sooda.Logging.log4net/Sooda.Logging.log4net.vs2003.csproj
@@ -95,6 +95,7 @@
             <Include>
                 <File
                     RelPath = "AssemblyBuildInfo.cs"
+                    SubType = "Code"
                     BuildAction = "Compile"
                 />
                 <File
