--- a/src/Sooda/Sooda.vs2003.csproj
+++ b/src/Sooda/Sooda.vs2003.csproj
@@ -95,6 +95,7 @@
             <Include>
                 <File
                     RelPath = "AssemblyBuildInfo.cs"
+                    SubType = "Code"
                     BuildAction = "Compile"
                 />
                 <File
